2010-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* ./: make buildable with rake-compiler.

2010-09-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/: -> ext/poppler/.

	* src/lib/: -> lib/.

2010-02-10  Kouhei Sutou  <kou@cozmixng.org>

	* sample/pdfdiv.rb: add.

2009-04-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/poppler.rb: ignore Gtk::InitError.

2008-11-03  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: remove needless checks.

	* extconf.rb, README, src/: remove 0.6.x support. require 0.8.0 or
	later.

2008-10-25  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_constants.rb: use assert_{,not_}const_defined in
	Test::Unit.

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use check_cairo.

2008-06-29  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_document.rb (TestDocument#test_save):
	omit if poppler < 0.8.2.

2008-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* test/run-test.rb: use glib/test/glib-test-init.rb.

2008-06-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-action.c: fix an index bug.

	* extconf.rb: include poppler.h in have_func test.

2008-05-23  Kouhei Sutou  <kou@cozmixng.org>

	* test/run-test.rb: use which not --version to detect make.

2008-05-13  Kouhei Sutou  <kou@cozmixng.org>

	* test/: use omit.

	* test/test_document.rb, test/test_constants.rb: fix version check.

	* test/test_constants.rb: followed the below changes.

	* src/rbpoppler-annotation.c: support master at 2008-05-13.

	* src/rbpoppler-page.c: add cairo availability check.

2008-04-22  Kouhei Sutou  <kou@cozmixng.org>

	* sample/number-pdf.rb: add.

2008-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix rcairo's source path.

2008-03-27  Kouhei Sutou  <kou@cozmixng.org>

	* README: added Ruby/GTK+ to Requirements.

2008-03-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.[ch], src/rbpoppler-private.h,
	src/rbpoppler-page.c, src/rbpoppler-form-field.c: split form
	field related codes.
