@@ -1,5 +1,8 @@
 2010-09-23  Kouhei Sutou  <kou@cozmixng.org>
 
+	* ext/poppler/rbpoppler.h: don't use rbpopplerverseion.h when
+	Poppler provides version macros.
+
 	* ./: make buildable with rake-compiler.
 
 2010-09-22  Kouhei Sutou  <kou@cozmixng.org>
